--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -12,9 +12,10 @@ src/Searchbook.c\
 src/Stock.c\
 src/Titlelist.c
 
- 
+TEST_SRC = test/test.c \
+unity/unity.c 
 INC_H = inc
-
+INC_T = unity
 
 ifdef OS
    EXEC = exe
@@ -31,4 +32,20 @@ all:
 run:
 	$(PROJ_NAME).$(EXEC)
 
+test:
+	gcc -I $(INC_H) -I $(INC_T) $(TEST_SRC) $(SRC) -o $(TEST_PROJ_NAME).$(EXEC)
+
+cppcheck:
+	cppcheck --enable=all $(SRC)
+
+valgrind:
+	valgrind ./$(PROJ_NAME).$(EXEC)
+
+debug:
+	gcc -I $(INC_H) $(SRC) main.c -g -o $(PROJ_NAME).$(EXEC)
+	gdb $(PROJ_NAME).$(EXEC)
+
+clean:
+	del *.DAT
+	del *.$(EXEC)
 
